# daily-textview-rs

./: Cargo.toml  README.md  dtext.py
src/: main.rs
